<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.ftrani.apiclimademo.DetalleActivity">

    <TextView
        android:id="@+id/tvPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/ciudad"/>
    <TextView
        android:id="@+id/tvUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp_actual"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp_min"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvTemperaturaMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp_max"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvTemperaturaMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/humedad"/>
    <TextView
        android:id="@+id/tvHumedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/presion"/>
    <TextView
        android:id="@+id/tvPresion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="..."/>



</LinearLayout>
